--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+    <div class="container">
+		<div id="b1">3</div>
+		<div id="b2">1</div>
+		<div id="b3">2</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
