--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-    <div class="container">
+    <div class="holder">
 		<div id="b1">3</div>
 		<div id="b2">1</div>
 		<div id="b3">2</div>
